# onshape-cli

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: cli.rs  dump_to_urdf.rs  fetch_snapshot_recursive.rs  main.rs  types.rs  util.rs
